--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,9 +2,9 @@ steps:
   - name: 'hashicorp/terraform:1.0.0'
     entrypoint: sh
     args: ["-c","terraform init"]
-  - name:  hashicorp/terraform:1.0.0'
+  - name: 'hashicorp/terraform:1.0.0'
     entrypoint: sh
     args: ["-c","terraform plan"]
-  - name: hashicorp/terraform:1.0.0'
+  - name: 'hashicorp/terraform:1.0.0'
     entrypoint: sh
     args: ["-c","terraform apply"]
