--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,6 @@
 steps:
+options:
+  logging: CLOUD_LOGGING_ONLY
   - name: 'hashicorp/terraform:1.0.0'
     entrypoint: sh
     args: ["-c","terraform init"]
