--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,4 +7,20 @@ steps:
   args: ["-c","terraform plan"]
 - name: 'hashicorp/terraform:1.0.0'
   entrypoint: sh
+  args: ["-c","terraform refresh"]
+- name: 'hashicorp/terraform:1.0.0'
+  entrypoint: sh
   args: ["-c","terraform apply --auto-approve"]
+- name: 'hashicorp/terraform:1.0.0'
+  entrypoint: sh
+  args: ["-c","terraform taint main"]
+- name: 'hashicorp/terraform:1.0.0'
+  entrypoint: sh
+  args: ["-c","terraform apply --auto-approve"]
+- name: 'hashicorp/terraform:1.0.0'
+  entrypoint: sh
+  args: ["-c","terraform replace main"]
+- name: 'hashicorp/terraform:1.0.0'
+  entrypoint: sh
+  args: ["-c","terraform apply --auto-approve"]
+
