--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,14 +10,4 @@ steps:
   args: ["-c","terraform refresh"]
 - name: 'hashicorp/terraform:1.0.0'
   entrypoint: sh
-  args: ["-c","terraform taint main"]
-- name: 'hashicorp/terraform:1.0.0'
-  entrypoint: sh
-  args: ["-c","terraform apply --auto-approve"]
-- name: 'hashicorp/terraform:1.0.0'
-  entrypoint: sh
-  args: ["-c","terraform replace main"]
-- name: 'hashicorp/terraform:1.0.0'
-  entrypoint: sh
-  args: ["-c","terraform apply --auto-approve"]
-
+  args: ["-c","terraform apply -replace="google_compute_network.main""]
