--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,3 +2,6 @@ steps:
 - name: 'hashicorp/terraform:1.0.0'
   entrypoint: sh
   args: ["-c","terraform init"]
+- name: 'hashicorp/terraform:1.0.0'
+  entrypoint: sh
+  args: ["-c","terraform plan"]
