--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,3 +5,6 @@ steps:
 - name: 'hashicorp/terraform:1.0.0'
   entrypoint: sh
   args: ["-c","terraform plan"]
+- name: 'hashicorp/terraform:1.0.0'
+  entrypoint: sh
+  args: ["-c","terraform apply --auto-approve"]
